--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,20 @@
-body{
+body {
   background-color: #0a0a1ef6;
   color: #ffffff;
+
+}
+
+.App {
+  padding: 0;
+  height: 100vh;
+}
+
+.Navbar {
+  flex: 0 0 auto;
+  margin-top: 100000px;
+}
+
+.ComposerBox {
+  flex: 1 1 auto;
+  margin-left: 3000px;
 }
