--- a/src/app/Components/MainContent.css
+++ b/src/app/Components/MainContent.css
@@ -1,6 +1,6 @@
 .main-content {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    left: 270px;
+    /* margin-left: 400px; */
+    margin-top: 30px;
 }
