--- a/src/app/Components/Post.css
+++ b/src/app/Components/Post.css
@@ -1,5 +1,5 @@
 .Post {
-    width: 600px;
+    width: 800px;
     border: 1px solid #ffffff15;
     border-radius: 10px;
     padding: 10px;
@@ -8,8 +8,9 @@
     background-color: #80808014;
     box-sizing: border-box;
 }
+
 .post-comment {
-    width: 600px;
+    width: 800px;
     border: 1px solid #ffffff15;
     border-radius: 10px;
     padding: 10px;
@@ -19,6 +20,7 @@
     background-color: #80808014;
     box-sizing: border-box;
 }
+
 .info {
     display: flex;
     align-items: center;
@@ -47,6 +49,7 @@
 }
 
 .profile-name {
+    display: center;
     width: 100px;
     height: 16px;
     margin-bottom: 5px;
@@ -63,7 +66,6 @@
     background-color: transparent;
 }
 
-
 .content {
     margin-top: 10px;
 }
@@ -75,38 +77,15 @@
 
 .content-picture {
     width: 100%;
-    
     object-fit: cover;
 }
 
-
 .social-bar {
-
     display: flex;
-    justify-content: center; /* Add this line */
-
+    justify-content: space-between;
 }
 
-.icon-like {
-    width: 20px;
-    height: 20px;
-}
-
-.icon-comment {
-    width: 20px;
-    height: 20px;
-    margin-right: 150px;
-    margin-left: 150px;
-}
-
-.icon-share {
-    width: 20px;
-    height: 20px;
-}
-
-.social-button-first,
-.social-button-second,
-.social-button-third{
+.social-button {
     display: flex;
     align-items: center;
     background-color: transparent;
@@ -117,45 +96,34 @@
     transition: background-color 0.3s ease;
 }
 
-.social-button-first:hover .social-icon,
-.social-button-second:hover .social-icon,
-.social-button-third:hover .social-icon{
-  /* Define the styles for the icon when button is hovered */
-  /* For example, change the color to red */
-  color: #1d64f2;
+.social-button:hover .social-icon {
+    color: #1d64f2;
 }
 
-.social-button-first:hover .social-name,
-.social-button-second:hover .social-name,
-.social-button-third:hover .social-name  {
-  /* Define the styles for the text when button is hovered */
-  /* For example, change the color to blue */
-  color: #1d64f2;
+.social-button:hover .social-name {
+    color: #1d64f2;
 }
 
-.social-button-second {
-    margin-left: 90px;
-    margin-right: 90px;
+.social-button:hover .social-text {
+    background-color: #1d64f24f;
 }
+
 .social-icon {
-    margin-right: 5px; /* Adjust the spacing between the icon and the name */
+    margin-right: 5px;
 }
 
 .social-name {
-    margin-right: 15px; /* Adjust the spacing between the name and the number */
+    margin-right: 15px;
 }
 
-.social-text{
-    background-color: #1d64f23c;
+.social-text {
+    background-color: #3e485a69;
     border-radius: 10px;
     padding-right: 10px;
     padding-left: 10px;
 }
 
-/* comment section */
-
 .comment-top-bar {
-    position: relative; /* Add position relative to make absolute positioning work */
     display: flex;
     align-items: center;
     margin-top: 10px;
@@ -166,33 +134,126 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background-color: #ffffff; /* You can use any color you want */
+    background-color: #ffffff;
     margin-right: 10px;
     color: #ffffff;
 }
 
 .comment-input-bar {
-    flex: 1;
     height: 30px;
     padding: 5px 10px;
     border: 1px solid transparent;
     background-color: #8080801d;
-    border-radius: 20px; /* Make it circular */
-    outline: none; /* Remove the outline on click */
+    border-radius: 20px;
+    outline: none;
     color: #ffffff;
-    width: 540px;
+    width: 625px;
 }
 
 .comment-icons {
-    position: absolute; /* Position the icons absolutely inside the input bar */
-    right: 10px; /* Adjust the right position to create space from the right edge */
-    top: 50%; /* Center the icons vertically */
-    transform: translateY(-50%); /* Adjust vertical centering */
+    padding: 10px;
+    display: flex;
+    flex: row;
+    flex-wrap: wrap;
 }
 
 .icon {
-    font-size: 20px;
-    margin-left: 4px; /* Adjust the space between icons */
+    font-size: 15px;
+    margin-left: 4px;
     cursor: pointer;
-    color: #ffffff; /* You can change the icon color as needed */
+    color: #ffffff;
+}
+
+.sort-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    font-size: 12px;
+}
+
+.sort-comment {
+    display: flex;
+    align-items: center;
+}
+
+.sort-name {
+    margin-right: 5px;
+}
+
+.sort-options {
+    margin-top: 0px;
+}
+
+.comment {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.profile-picture-comment {
+    min-width: 30px;
+    min-height: 30px;
+    border-radius: 50%;
+    background-color: #ffffff;
+    margin-right: 10px;
+}
+
+.comment-section-interact-bar {
+    display: flex;
+}
+
+.interact-comment {
+    display: flex;
+    margin-top: 5px;
+    margin-left: 10px;
+    justify-content: space-between;
+}
+
+
+.reply {
+    display: flex;
+    align-items: center;
+}
+
+.reply-icon {
+    margin-right: 5px;
+    margin-left: 30px;
+}
+
+.empty-space {
+    min-width: 30px;
+    min-height: 30px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.comment-buttons {
+    display: flex;
+    align-items: center;
+}
+
+.comment-upvote,
+.comment-downvote {
+
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.upvote-icon,
+.downvote-icon{
+    margin-right: 10px;
+}
+
+.comment-upvote:hover,
+.comment-downvote:hover {
+    color:#1d64f2;
 }
