--- a/src/app/Components/AppNavbar.css
+++ b/src/app/Components/AppNavbar.css
@@ -42,13 +42,12 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin-right: 10px;
-    
+  
 }
 
 .profile-name {
+    display: flex;
     font-size: 18px;
-    margin-right: 10px;
     font-weight: bold;
 }
 
