--- a/src/app/chats/Components/DM.css
+++ b/src/app/chats/Components/DM.css
@@ -2,6 +2,7 @@
     max-width: 300px;
     margin-left: 10px;
 }
+
 .user-card {
     display: flex;
     align-items: center; /* Center items vertically */
@@ -13,7 +14,7 @@
     justify-content: center; /* Center content horizontally */
     width: 50px; /* Adjust the width as needed */
     height: 50px; /* Adjust the height as needed */
-    background-color: rebeccapurple; /* Just for visualization */
+    background-color: rgb(153, 102, 51); /* Just for visualization */
     border-radius: 50%; /* Make it a circle */
     margin: 10px; /* Add some spacing */
     margin-left: 0px;
@@ -61,33 +62,6 @@ button svg{
     height: 20px;
     width: 20px;
     color: #ffffff;
-}
-
-.contact {
-    display: flex;
-}
-
-.contact-card {
-    display: flex;
-    align-items: center; /* Center items vertically */
-}
-
-.contact-pf {
-    display: flex;
-    align-items: center; /* Center content vertically */
-    justify-content: center; /* Center content horizontally */
-    width: 50px; /* Adjust the width as needed */
-    height: 50px; /* Adjust the height as needed */
-    background-color: rebeccapurple; /* Just for visualization */
-    border-radius: 50%; /* Make it a circle */
-    margin-right: 10px; /* Add some spacing */
-    margin-bottom: 10px;
-}
-
-
-.contact-info{
-    padding-top: 10px;
-    padding-bottom: 10px;
 }
 
 .friends-list {
