--- a/src/app/chats/Components/Pv.css
+++ b/src/app/chats/Components/Pv.css
@@ -1,22 +1,4 @@
-/* Pv.css */
-.Pv-page {
-  width: 300px;
-  height: 500px;
-  margin-left: 10px;
-}
 
-.top-bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 300px;
-  background-color: transparent;
-  padding: 10px;
-}
-
-.more-options {
-  position: relative;
-}
 
 .more-options:hover {
   cursor: pointer;
@@ -26,27 +8,7 @@
   position: auto;
 }
 
-.user-card {
-  display: flex;
-  align-items: center;
-}
 
-.user-pf {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50px;
-  height: 50px;
-  background-color: rebeccapurple;
-  border-radius: 50%;
-  margin: 10px;
-  margin-left: 0px;
-}
-
-.user-info {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
 
 .chat-container {
   display: flex;
@@ -57,19 +19,19 @@
   width: 285px;
 }
 
-.chat-container::-webkit-scrollbar {
+.custom-scrollbar {
   width: 6px; /* Set the width of the scrollbar */
 }
 
-.chat-container::-webkit-scrollbar-track {
+.custom-scrollbar::-webkit-scrollbar-track {
   background: transparent; /* Set the background color of the scrollbar track */
 }
 
-.chat-container::-webkit-scrollbar-thumb {
+.custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.3); /* Set the color of the scrollbar thumb */
   border-radius: 3px; /* Set the border radius of the thumb */
 }
 
-.chat-container::-webkit-scrollbar-thumb:hover {
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.5); /* Set the color of the thumb on hover */
 }
